--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "exact": "^0.8.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
