--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 PORT=8082
-MONGO_URI =mongodb+srv://angeles_renjo:DbRenjo@cluster0.80mh15d.mongodb.net/?retryWrites=true&w=majorityNODE_ENV=production
+mongoURI=mongodb+srv://angeles_renjo:DbRenjo@cluster0.80mh15d.mongodb.net/?retryWrites=true&w=majority
+NODE_ENV=production
