--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "node app.js",
     "app": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "install-clieant": "cd clieant && npm install"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,9 +24,9 @@
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.2.8",
     "validation": "^0.0.1"
   },
   "devDependencies": {
