--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "app": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix my-app && npm run build --prefix my-app"
+    "install-my-app": "cd my-app && npm install",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install-my-app && npm run build"
   },
   "repository": {
     "type": "git",
