--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "build": "cd my-app && npm run build",
+    "install": "cd my-app npm install",
     "start": "node app.js",
     "app": "nodemon app.js",
+    "my-app": "npm start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
