--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "cd my-app && npm run build",
-    "install": "cd my-app npm install",
+    "install": "cd my-app && npm install",
     "start": "node app.js",
     "app": "nodemon app.js",
     "my-app": "npm start --prefix client",
