--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "cd my-app && npm run build",
-    "install": "cd my-app && npm install",
     "start": "node app.js",
-    "app": "nodemon app.js",
-    "my-app": "npm start --prefix client",
+    "build": "cd my-app && npm run build",
+    "install-my-app": "cd my-app && npm install",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-my-app && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
