--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-my-app && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install my-app && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
