--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "install":"cd my-app && npm install",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install my-app && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
