--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,7 +9,6 @@
     "cors": "^2.8.5",
     "exact": "^0.8.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -39,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^12.1.2"
+    "@testing-library/react": "^12.1.2",
+    "react-dom": "^17.0.2"
   }
 }
