--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "install":"cd my-app && npm install",
+    "install": "cd my-app && npm install",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install my-app && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^6.2.8",
+    "react": "^17.0.2",
     "validation": "^0.0.1"
   },
   "devDependencies": {
