--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "exact": "^0.8.0",
-    "react": "^18.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -36,9 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/react": "^12.1.2",
-    "react-dom": "^18.2.0"
   }
 }
