--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "install": "cd my-app && npm install",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install my-app && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install --prefix my-app && npm run build --prefix my-app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
