--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "install-client": "cd my-app && npm install",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install-client --prefix my-app && npm run build --prefix my-app",
+    "install-my-app": "cd my-app && npm install",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install-my-app --prefix my-app && npm run build --prefix my-app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
