--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "build": "cd my-app && npm run build",
     "install-my-app": "cd my-app && npm install",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install-my-app --prefix my-app && npm run build --prefix my-app",
     "test": "echo \"Error: no test specified\" && exit 1"
