--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "npm start app.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install my-app --prefix my-app && npm run build --prefix my-app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
