--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install my-app --prefix my-app && npm run build --prefix my-app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cd my-app && npm run build",
+    "install-my-app": "cd my-app && npm install",
+    "heroku-postbuild": "npm run install-my-app && npm run build",
+    "server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
