--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "cd my-app && npm run build",
     "install-my-app": "cd my-app && npm install",
     "heroku-postbuild": "npm run install-my-app && npm run build",
-    "server": "nodemon app.js"
+    "server": "node app.js",
+    "develop": "concurrently --kill-others-on-fail \"npm run app\" \"npm run start --prefix my-app\"",
+    "start": "concurrently --kill-others-on-fail \"npm run app\" \"npm run start --prefix my-app\""
   },
   "repository": {
     "type": "git",
