--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "heroku-postbuild": "npm run install-my-app && npm run build",
     "server": "node app.js",
     "develop": "concurrently --kill-others-on-fail \"npm run app\" \"npm run start --prefix my-app\"",
-    "start": "concurrently --kill-others-on-fail \"npm run app\" \"npm run start --prefix my-app\""
+    "start": "set NODE_ENV=production && concurrently --kill-others-on-fail \"npm run app\" \"npm run start --prefix my-app\""
   },
   "repository": {
     "type": "git",
