--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cd my-app && npm run build",
     "install-my-app": "cd my-app && npm install",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-my-app && npm run build",
-    "start": "set NODE_ENV=NPM_CONFIG_PRODUCTION &&node app.js "
+    "start": "set NODE_ENV=production && node app.js "
   },
   "repository": {
     "type": "git",
