--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
 PORT=8082
 mongoURI=mongodb+srv://angeles_renjo:DbRenjo@cluster0.80mh15d.mongodb.net/?retryWrites=true&w=majority
-env:NODE_ENV = 'production'
+NODE_ENV = 'production'
