--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "mysterious-tundra-61233" #Must be unique in Heroku
+          heroku_app_name: "young-wildwood-67580" #Must be unique in Heroku
           heroku_email: "angeles.renjo@gmail.com"
